# shmup

./: cabal.project  flake.nix  shmup.cabal
cbits/: raylib_helpers.c
src-exe/: Main.hs
src-lib/Shmup/: C0.hs  Main.hs  Shell.hs  Terminal.hs
src-lib/Shmup/Terminal/: Parser.hs
test/: Spec.hs
test/Shmup/Terminal/: ParserSpec.hs
