cabal-version:   3.0
name:            shmup
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Johannes Maier
maintainer:      johannes.maier@mailbox.org
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -Werror=missing-fields -threaded

library
  import:           warnings
  exposed-modules:  Shmup.Main
  build-depends:
    , async
    , base
    , bytestring
    , directory
    , h-raylib
    , mtl
    , process
    , stm
    , unix

  hs-source-dirs:   src-lib
  default-language: GHC2024

executable shmup
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base
    , shmup

  hs-source-dirs:   src-exe
  default-language: GHC2024
