cabal-version:   3.0
name:            shmup
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Johannes Maier
maintainer:      johannes.maier@mailbox.org
build-type:      Simple
extra-doc-files: CHANGELOG.md

common options
  ghc-options: -Wall -Werror=missing-fields -threaded

library
  import:           options
  exposed-modules:
    Shmup.Main
    Shmup.Shell
    Shmup.Terminal
    Shmup.Terminal.Parser

  build-depends:
    , async
    , base
    , bytestring
    , directory
    , h-raylib
    , mtl
    , parsec
    , process
    , stm
    , unix

  hs-source-dirs:   src-lib
  default-language: GHC2024
  c-sources:        cbits/raylib_helpers.c

executable shmup
  import:           options
  main-is:          Main.hs
  build-depends:
    , base
    , shmup

  hs-source-dirs:   src-exe
  default-language: GHC2024

test-suite shmup-spec
  import:           options
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:    Shmup.Terminal.ParserSpec
  build-depends:
    , base
    , bytestring
    , hspec
    , parsec
    , shmup

  default-language: GHC2024
